<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_marginTop="@dimen/margin_30"
    app:cardCornerRadius="30dp"
    app:cardElevation="0dp"
    app:cardBackgroundColor="@color/pink">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="@dimen/margin_16"
        android:paddingBottom="@dimen/margin_30"
        tools:ignore="RtlSymmetry">

        <ImageView
            android:id="@+id/iv_warning"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/ic_alert_circle"
            android:layout_marginTop="@dimen/margin_12"
            android:layout_marginEnd="@dimen/margin_12"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <TextView
            android:id="@+id/tv_title_bonus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/Theme.Portfolio.Text.GreyText"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="@dimen/margin_26"
            android:text="@string/expected_bonus"/>

        <LinearLayout
            android:id="@+id/bonus_header_linear"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_8"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_title_bonus">

            <TextView
                android:id="@+id/tv_bonus"
                style="@style/Theme.Portfolio.Text.HeaderText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                tools:text="145,309.30" />

            <RadioGroup
                android:id="@+id/radio_group_currency"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/margin_12"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/radio_rub_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:button="@android:color/transparent"
                    android:background="@drawable/bg_rub_radio_selector"/>

                <RadioButton
                    android:id="@+id/radio_usd_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_6"
                    android:button="@android:color/transparent"
                    android:background="@drawable/bg_usd_radio_selector"/>

            </RadioGroup>

        </LinearLayout>


        <TextView
            android:id="@+id/tv_title_team"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_28"
            style="@style/Theme.Portfolio.Text.GreyText"
            android:text="@string/in_team"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/bonus_header_linear"/>

        <ImageView
            android:id="@+id/team_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_8"
            android:background="@drawable/bg_rounded"
            android:backgroundTint="@color/black"
            android:padding="4dp"
            app:srcCompat="@drawable/ic_users"
            app:layout_constraintTop_toBottomOf="@id/tv_title_team"
            app:layout_constraintStart_toStartOf="parent"/>
        <TextView
            android:id="@+id/tv_team"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            style="@style/Theme.Portfolio.Text.SubHeaderText"
            tools:text="450"
            app:layout_constraintTop_toTopOf="@id/team_icon"
            app:layout_constraintBottom_toBottomOf="@id/team_icon"
            app:layout_constraintEnd_toStartOf="@id/btn_users"
            android:layout_marginEnd="@dimen/margin_8"
            android:layout_marginStart="@dimen/margin_8"
            app:layout_constraintStart_toEndOf="@id/team_icon"/>

        <androidx.cardview.widget.CardView
            android:id="@+id/btn_users"
            android:layout_width="37dp"
            android:layout_height="37dp"
            android:layout_marginEnd="@dimen/margin_16"
            app:cardCornerRadius="8dp"
            app:cardElevation="4dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/tv_team"
            app:layout_constraintBottom_toBottomOf="@id/tv_team">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                app:srcCompat="@drawable/ic_user_plus"/>

        </androidx.cardview.widget.CardView>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/margin_16"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@id/tv_team"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="@dimen/margin_30">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/Theme.Portfolio.Text.GreyText"
                    android:text="@string/refill_rub"/>

                <TextView
                    android:id="@+id/tv_refill_rub"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/Theme.Portfolio.Text.BodyText"
                    android:layout_marginTop="@dimen/margin_6"
                    tools:text="76,616.42 $"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/Theme.Portfolio.Text.GreyText"
                    android:text="@string/withdrawn_rub"/>

                <TextView
                    android:id="@+id/tv_withdrawn_rub"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/Theme.Portfolio.Text.BodyText"
                    android:layout_marginTop="@dimen/margin_6"
                    android:text="@string/ruble_0"/>

            </LinearLayout>

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>