<?xml version="1.0" encoding="utf-8"?>

<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="@dimen/margin_30"
    app:cardBackgroundColor="@color/light_green"
    app:cardCornerRadius="30dp"
    app:cardElevation="0dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="@dimen/margin_16"
        android:paddingBottom="@dimen/margin_30"
        tools:ignore="RtlSymmetry">

        <ImageView
            android:id="@+id/iv_warning"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_12"
            android:layout_marginEnd="@dimen/margin_12"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_alert_circle" />

        <TextView
            android:id="@+id/tv_title_grade"
            style="@style/Theme.Portfolio.Text.GreyText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_26"
            android:text="@string/rate_of_portfolio"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_grade"
            style="@style/Theme.Portfolio.Text.HeaderText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_8"
            android:layout_marginEnd="@dimen/margin_16"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_title_grade"
            tools:text="145,309.39$" />

        <TextView
            android:id="@+id/tv_percent"
            style="@style/Theme.Portfolio.Text.GreenText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_8"
            app:drawableEndCompat="@drawable/ic_arrow_up"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_grade"
            tools:text="78.16%" />

        <androidx.cardview.widget.CardView
            android:id="@+id/linear_rate"
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:layout_marginTop="@dimen/margin_20"
            android:layout_marginEnd="@dimen/margin_16"
            android:orientation="horizontal"
            app:cardCornerRadius="16dp"
            app:cardElevation="0dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_percent">

            <LinearLayout
                android:id="@+id/linear_rate_linear"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

<!--                <View-->
<!--                    android:id="@+id/rating_stock"-->
<!--                    android:layout_width="0dp"-->
<!--                    android:layout_weight="30"-->
<!--                    android:layout_height="match_parent"-->
<!--                    android:background="@color/purple" />-->

<!--                <View-->
<!--                    android:id="@+id/rating_usd"-->
<!--                    android:layout_width="0dp"-->
<!--                    android:layout_height="match_parent"-->
<!--                    android:layout_weight="40"-->
<!--                    android:background="@color/purple"-->
<!--                    android:foreground="@drawable/bg_left_rounded"-->
<!--                    android:foregroundTint="@color/green" />-->

<!--                <View-->
<!--                    android:id="@+id/rating_rub"-->
<!--                    android:layout_width="0dp"-->
<!--                    android:layout_height="match_parent"-->
<!--                    android:layout_weight="10"-->
<!--                    android:background="@color/green"-->
<!--                    android:foreground="@drawable/bg_left_rounded"-->
<!--                    android:foregroundTint="@color/yellow" />-->

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_24"
            android:layout_marginEnd="@dimen/margin_16"
            android:orientation="horizontal"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/linear_rate">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <View
                    android:layout_width="6dp"
                    android:layout_height="6dp"
                    android:background="@drawable/bg_rounded"
                    android:backgroundTint="@color/purple" />

                <TextView
                    style="@style/Theme.Portfolio.Text.GreyText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_12"
                    android:text="@string/in_stocks" />

                <TextView
                    android:id="@+id/tv_in_stock"
                    style="@style/Theme.Portfolio.Text.BodyText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_6"
                    tools:text="76,616.42 $" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <View
                    android:layout_width="6dp"
                    android:layout_height="6dp"
                    android:background="@drawable/bg_rounded"
                    android:backgroundTint="@color/green" />

                <TextView
                    style="@style/Theme.Portfolio.Text.GreyText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_12"
                    android:text="@string/balance_usd" />

                <TextView
                    android:id="@+id/tv_usd_balance"
                    style="@style/Theme.Portfolio.Text.BodyText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_6"
                    tools:text="76,616.42 $" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <View
                    android:layout_width="6dp"
                    android:layout_height="6dp"
                    android:background="@drawable/bg_rounded"
                    android:backgroundTint="@color/yellow" />

                <TextView
                    style="@style/Theme.Portfolio.Text.GreyText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_12"
                    android:text="@string/balance_rub" />

                <TextView
                    android:id="@+id/tv_rub_balance"
                    style="@style/Theme.Portfolio.Text.BodyText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_6"
                    tools:text="0,0 ₽" />

            </LinearLayout>

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>
